@@ -1,10 +1,14 @@
 package io.logicforge.core.engine.compile;
 
+import io.logicforge.core.common.Coordinates;
 import io.logicforge.core.common.Pair;
 import io.logicforge.core.common.CoordinateTrie;
+import io.logicforge.core.common.TypedArgument;
 import io.logicforge.core.engine.Action;
+import io.logicforge.core.engine.ExecutionQueue;
 import io.logicforge.core.engine.Process;
 import io.logicforge.core.engine.ProcessBuilder;
+import io.logicforge.core.engine.impl.DefaultExecutionContext;
 import io.logicforge.core.exception.ProcessConstructionException;
 import io.logicforge.core.exception.ProcessExecutionException;
 import io.logicforge.core.engine.ExecutionContext;
@@ -22,21 +26,22 @@ import io.logicforge.core.model.specification.ActionSpec;
 import io.logicforge.core.model.specification.EngineSpec;
 import io.logicforge.core.model.specification.FunctionSpec;
 import io.logicforge.core.model.specification.InputSpec;
-import io.logicforge.core.model.specification.TypeSpec;
-import io.logicforge.core.util.CoordinateUtils;
+import io.logicforge.core.model.specification.ProcessSpec;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
+
+import static io.logicforge.core.common.Coordinates.ROOT;
 
 @RequiredArgsConstructor
 public class CompilationProcessBuilder implements ProcessBuilder {
@@ -50,9 +55,15 @@ public class CompilationProcessBuilder implements ProcessBuilder {
      * <ol>
      * <li>The package name to for the generated class</li>
      * <li>A string containing a list of formatted import statements</li>
+     * <li>The process interface class name</li>
      * <li>A string containing a formatted list of fields and a constructor injecting those fields</li>
+     * <li>The signature for the process executor method</li>
+     * <li>Method calls for loading the process arguments into the "args" map</li>
+     * <li>The EngineSpec instance var name and queue var name (comma-separated)</li>
+     * <li>the function's return statement</li>
      * <li>The Process's unique ID string</li>
      * <li>A formatted list of the Process's executables, defined as inner classes</li>
+     * <li>The return statement, defined as an inner class</li>
      * </ol>
      */
     private static final String CLASS_FILE_TPL = """
@@ -60,17 +71,21 @@ public class CompilationProcessBuilder implements ProcessBuilder {
 
       %s
 
-      public class CompiledProcess implements Process {
+      public class CompiledProcess implements %s {
 
       \tprivate final AtomicLong executionCount = new AtomicLong(0L);
       \tprivate final CoordinateTrie<Action> trie = new CoordinateTrie<>();
 
       %s
-      \tpublic void execute(final ExecutionContext context) {
-
+      \t@Override
+      \t%s {
       \t\tfinal long executionNumber = executionCount.getAndIncrement();
-      \t\tfinal Action rootAction = trie.get(new int[0]);
+      \t\tfinal Map<String, Object> args = new HashMap<>();
+      %s
+      \t\tfinal ExecutionContext context = new DefaultExecutionContext(%s, args);
+      \t\tfinal Action rootAction = trie.get(Coordinates.ROOT);
       \t\tcontext.enqueue(rootAction);
+      \t\t%s
       \t}
 
       \tpublic String getProcessId() {
@@ -80,6 +95,7 @@ public class CompilationProcessBuilder implements ProcessBuilder {
       \tpublic long getExecutionCount() {
       \t\treturn executionCount.get();
       \t}
+      %s
       %s
       }
       """;
@@ -121,19 +137,52 @@ public class CompilationProcessBuilder implements ProcessBuilder {
             """
                 \tprivate class %s implements Action {
       
-                \t\tprivate final int[] coordinates = %s;
-                \t\tprivate final List<int[]> dependencyCoordinates = List.of(%s);
+                \t\tprivate final Coordinates coordinates = %s;
+                \t\tprivate final List<Coordinates> dependencyCoordinates = List.of(%s);
       
                 \t\tpublic Object execute(final ExecutionContext context) throws ProcessExecutionException {
       
                 \t\t\t%s;
                 \t\t}
                           
-                \t\tpublic int[] getCoordinates() {
+                \t\tpublic Coordinates getCoordinates() {
                 \t\t\treturn coordinates;
                 \t\t}
                           
-                \t\tpublic List<int[]> getDependencyCoordinates() {
+                \t\tpublic List<Coordinates> getDependencyCoordinates() {
+                \t\t\treturn dependencyCoordinates;
+                \t\t}
+      
+                \t\tpublic String toString() {
+                \t\t\treturn "%s";
+                \t\t}
+                \t}""";
+
+    /**
+     * A template representing an action that calculates the processes return value;
+     *
+     * <ol>
+     * <li>The execution logic</li>
+     * <li>The execution logic (to be outputted as a string for debugging)</li>
+     * </ol>
+     */
+    private static final String RETURN_ACTION_CLASS_TEMPLATE =
+            """
+                
+                \tprivate class ReturnAction implements Action {
+      
+                \t\tprivate final Coordinates coordinates = Coordinates.from(List.of(-1));
+                \t\tprivate final List<Coordinates> dependencyCoordinates = List.of();
+      
+                \t\tpublic Object execute(final ExecutionContext context) throws ProcessExecutionException {
+                \t\t\treturn %s;
+                \t\t}
+                          
+                \t\tpublic Coordinates getCoordinates() {
+                \t\t\treturn coordinates;
+                \t\t}
+                          
+                \t\tpublic List<Coordinates> getDependencyCoordinates() {
                 \t\t\treturn dependencyCoordinates;
                 \t\t}
       
@@ -143,8 +192,9 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                 \t}""";
 
     private static final Set<Class<?>> DEFAULT_IMPORTS =
-            Set.of(Process.class, Action.class, ExecutionContext.class, AtomicLong.class,
-                    CoordinateTrie.class, ProcessExecutionException.class, List.class);
+            Set.of(Action.class, ExecutionContext.class, DefaultExecutionContext.class, AtomicLong.class,
+                    Coordinates.class, CoordinateTrie.class, ProcessExecutionException.class, List.class, Map.class,
+                    HashMap.class);
 
     private final EngineSpec engineSpec;
     private final ProcessCompiler compiler;
@@ -152,13 +202,14 @@ public class CompilationProcessBuilder implements ProcessBuilder {
     private final AtomicLong processCounter = new AtomicLong(0);
 
     @Override
-    public Process buildProcess(final ProcessConfig processConfig)
+    public <T extends Process> T buildProcess(final ProcessConfig<T> processConfig, final ExecutionQueue queue)
             throws ProcessConstructionException {
-        final ClassFileData classFileData = new ClassFileData(processConfig);
+        final Class<T> functionalInterface = processConfig.getFunctionalInterface();
+        final ClassFileData classFileData = new ClassFileData(processConfig, queue, functionalInterface);
         final String className = classFileData.getClassName();
         final String code = classFileData.getContents();
-        final Object[] args = classFileData.getInstanceVariables();
-        return compiler.compileAndInstantiate(className, code, args);
+        final List<TypedArgument> args = classFileData.getInstanceVariables();
+        return compiler.compileAndInstantiate(className, code, args, functionalInterface);
     }
 
     public interface SourceSegment {
@@ -168,32 +219,51 @@ public class CompilationProcessBuilder implements ProcessBuilder {
     private class ClassFileData {
 
         private final Map<Class<?>, Pair<String, String>> toImport = new HashMap<>();
-        private final Map<Object, String> instanceVars = new LinkedHashMap<>();
+        private final Map<Object, Pair<Class<?>, String>> instanceVars = new LinkedHashMap<>();
         private final CoordinateTrie<ExecutableInnerClassData> executableCoordinateTrie =
                 new CoordinateTrie<>();
-
-        private final boolean allowConcurrency;
-
+        private final ProcessConfig config;
         private final long processId;
+        private final ProcessSpec processSpec;
+        private final String engineSpecVarName;
+        private final String queueVarName;
+        private final String processInterfaceName;
         @Getter
         private final String contents;
 
-        private ClassFileData(final ProcessConfig config) {
-            this.allowConcurrency = config.isAllowConcurrency();
+        private ClassFileData(final ProcessConfig config,
+                              final ExecutionQueue queue, final Class<?> processInterfaceClass) throws ProcessConstructionException {
+
+            this.config = config;
             this.processId = processCounter.getAndIncrement();
+            this.engineSpecVarName = ensureInstanceVar(engineSpec);
+            this.queueVarName = ensureInstanceVar(queue, ExecutionQueue.class);
+            this.processSpec = engineSpec.getProcesses().values().stream()
+                    .filter(spec -> spec.getMethod().getDeclaringClass().equals(processInterfaceClass))
+                    .findFirst()
+                    .orElseThrow(() -> new ProcessConstructionException(("Supplied process interface %s has not been " +
+                            "registered").formatted(processInterfaceClass)));
+            this.processInterfaceName = ensureImport(processSpec.getMethod().getDeclaringClass());
 
             DEFAULT_IMPORTS.forEach(this::ensureImport);
 
-            final int[] rootCoordinates = new int[0];
             final BlockConfig rootBlock = config.getRootBlock();
-            final int[][] rootDependencies = new int[0][];
-            constructInnerClass(rootCoordinates, rootBlock, rootDependencies);
+            final Set<Coordinates> rootDependencies = new HashSet<>();
+            constructInnerClass(ROOT, rootBlock, rootDependencies);
             this.contents = generateContents();
         }
 
+        public boolean isAllowConcurrency() {
+            return config.isAllowConcurrency();
+        }
+
         public String ensureInstanceVar(final Object object) {
-            ensureImport(object.getClass());
-            return instanceVars.computeIfAbsent(object, obj -> "var" + instanceVars.size());
+            return ensureInstanceVar(object, object.getClass());
+        }
+
+        public String ensureInstanceVar(final Object object, final Class<?> type) {
+            ensureImport(type);
+            return instanceVars.computeIfAbsent(object, obj -> new Pair<>(type, "var" + instanceVars.size())).getRight();
         }
 
         public String ensureImport(final Class<?> classToImport) {
@@ -202,7 +272,7 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                 Class<?> pointer = c;
                 final Class<?> root;
                 while (true) {
-                    nestedSegmentNames.add(0, pointer.getSimpleName());
+                    nestedSegmentNames.addFirst(pointer.getSimpleName());
                     if (pointer.getEnclosingClass() == null) {
                         root = pointer;
                         break;
@@ -218,12 +288,21 @@ public class CompilationProcessBuilder implements ProcessBuilder {
         }
 
         public String generateContents() {
-            return CLASS_FILE_TPL.formatted(formatPackageName(), formatImports(),
-                    formatFieldsAndConstructor(), processId, formatInnerClasses());
+            return CLASS_FILE_TPL.formatted(
+                    formatPackageName(),
+                    formatImports(),
+                    processInterfaceName,
+                    formatFieldsAndConstructor(),
+                    formatMethodSignature(),
+                    formatArgsLoadingLogic(),
+                    "%s, %s".formatted(engineSpecVarName, queueVarName),
+                    formatReturnStatement(),
+                    processId, formatInnerClasses(),
+                    formatReturnActionInnerClass());
         }
 
-        private void constructInnerClass(final int[] coordinates, final ExecutableConfig config,
-                                         final int[][] dependencyCoordinates) {
+        private void constructInnerClass(final Coordinates coordinates, final ExecutableConfig config,
+                                         final Set<Coordinates> dependencyCoordinates) {
             final ExecutableInnerClassData innerClass =
                     new ExecutableInnerClassData(this, config, coordinates, dependencyCoordinates);
             executableCoordinateTrie.put(coordinates, innerClass);
@@ -232,22 +311,19 @@ public class CompilationProcessBuilder implements ProcessBuilder {
             if (config instanceof BlockConfig blockConfig) {
                 final List<ExecutableConfig> executables = blockConfig.getExecutables();
                 for (int childIndex = 0; childIndex < executables.size(); childIndex++) {
-                    final int[] childCoordinates = CoordinateUtils.getNthChild(coordinates, childIndex);
+                    final Coordinates childCoordinates = coordinates.getNthChild(childIndex);
                     final ExecutableConfig child = executables.get(childIndex);
-                    final int[][] childDependencyCoordinates;
-                    if (allowConcurrency || childIndex == 0) {
-                        childDependencyCoordinates = new int[0][];
-                    } else {
-                        childDependencyCoordinates =
-                                new int[][] {CoordinateUtils.getAncestor(childCoordinates)};
+                    final Set<Coordinates> childDependencyCoordinates = new HashSet<>();
+                    if (!isAllowConcurrency() && childIndex != 0) {
+                        childDependencyCoordinates.add(childCoordinates.getAncestor());
                     }
                     constructInnerClass(childCoordinates, child, childDependencyCoordinates);
                 }
             } else if (config instanceof ControlStatementConfig controlConfig) {
                 for (int blockIndex = 0; blockIndex < controlConfig.getBlocks().size(); blockIndex++) {
-                    final int[] blockCoordinates = CoordinateUtils.getNthChild(coordinates, blockIndex);
+                    final Coordinates blockCoordinates = coordinates.getNthChild(blockIndex);
                     final BlockConfig block = controlConfig.getBlocks().get(blockIndex);
-                    final int[][] blockDependencyCoordinates = new int[0][]; // control blocks are always independent
+                    final Set<Coordinates> blockDependencyCoordinates = new HashSet<>(); // control blocks are always independent
                     constructInnerClass(blockCoordinates, block, blockDependencyCoordinates);
                 }
             }
@@ -258,31 +334,32 @@ public class CompilationProcessBuilder implements ProcessBuilder {
         }
 
         private String formatImports() {
-            return toImport.values().stream().map(Pair::getLeft).sorted().map("import %s;"::formatted)
+            return toImport.values().stream().map(Pair::getLeft).sorted().distinct().map("import %s;"::formatted)
                     .collect(Collectors.joining("\n"));
         }
 
         private String formatFieldsAndConstructor() {
-            final String fieldDeclarations = instanceVars.entrySet().stream().map(e -> {
-                final Class<?> type = e.getKey().getClass();
+            final String fieldDeclarations = instanceVars.values().stream().map(typeNamePair -> {
+                final Class<?> type = typeNamePair.getLeft();
                 final String typeRef = toImport.get(type).getRight();
-                final String instanceVarName = e.getValue();
+                final String instanceVarName = typeNamePair.getRight();
                 return "\tfinal %s %s;".formatted(typeRef, instanceVarName);
             }).collect(Collectors.joining("\n"));
-            final String constructorArgs = instanceVars.entrySet().stream().map(e -> {
-                final Class<?> type = e.getKey().getClass();
+            final String constructorArgs = instanceVars.values().stream().map(typeNamePair -> {
+                final Class<?> type = typeNamePair.getLeft();
                 final String typeRef = toImport.get(type).getRight();
-                final String instanceVarName = e.getValue();
+                final String instanceVarName = typeNamePair.getRight();
                 return "final %s %s".formatted(typeRef, instanceVarName);
             }).collect(Collectors.joining(", "));
             final String fieldInitializations = instanceVars.values().stream()
+                    .map(Pair::getRight)
                     .map(instanceVarName -> "\t\tthis.%s = %s;".formatted(instanceVarName, instanceVarName))
                     .collect(Collectors.joining("\n"));
             final String trieLoading =
                     executableCoordinateTrie.values().stream().map(innerClass -> {
-                        final int[] coordinates = innerClass.getCoordinates();
+                        final Coordinates coordinates = innerClass.getCoordinates();
                         final String varName =
-                                "exec" + CoordinateUtils.formatCoordinatesAsVariableFragment(coordinates);
+                                "exec" + coordinatesAsVariableFragment(coordinates);
                         final String className = innerClass.getClassName();
                         return """
                 \t\tfinal Action %s = new %s();
@@ -294,13 +371,75 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                     fieldInitializations, trieLoading);
         }
 
+        private String formatMethodSignature() {
+            final StringBuilder builder = new StringBuilder();
+            final Method method = processSpec.getMethod();
+            final Class<?> returnType = method.getReturnType();
+            builder.append("\tpublic ")
+                    .append(Void.class.equals(returnType) ? "void" : ensureImport(returnType))
+                    .append(" ")
+                    .append(method.getName())
+                    .append("(");
+            for (int i = 0; i < processSpec.getInputs().size(); i++) {
+                builder.append(i > 0 ? ", " : "");
+                final InputSpec input = processSpec.getInputs().get(i);
+                final String name = input.getName();
+                final boolean multi = input.isMulti();
+                final Class<?> type = input.getType();
+                final String typeName = ensureImport(type);
+                builder.append("final ")
+                        .append(typeName)
+                        .append(multi ? "[] " : " ")
+                        .append(name);
+            }
+            builder.append(")");
+            return builder.toString();
+        }
+
+        private String formatArgsLoadingLogic() {
+            final StringBuilder builder = new StringBuilder();
+            for (final InputSpec input : processSpec.getInputs()) {
+                final String name = input.getName();
+                builder.append("\t\targs.put(\"")
+                        .append(name)
+                        .append("\", ")
+                        .append(name)
+                        .append(");\n");
+            }
+            return builder.toString();
+        }
+
+        private String formatReturnStatement() {
+            final Class<?> type = processSpec.getOutputType();
+            if (Void.class.equals(type)) {
+                return "context.await(new ReturnAction(), Void.class);";
+            } else {
+                final String typeRef = ensureImport(type);
+                return "return context.await(new ReturnAction(), %s.class);".formatted(typeRef);
+            }
+        }
+
         private String formatInnerClasses() {
             return executableCoordinateTrie.values().stream()
                     .map(ExecutableInnerClassData::getContents).collect(Collectors.joining("\n\n"));
         }
 
-        public Object[] getInstanceVariables() {
-            return instanceVars.keySet().toArray(new Object[0]);
+        private String formatReturnActionInnerClass() {
+            final String implementation;
+            final Class<?> type = processSpec.getOutputType();
+            if (config.getReturnStatement() != null && !Void.class.equals(type)) {
+                final ExpressionData expressionData = mapExpression(this, config.getReturnStatement(), type);
+                implementation = expressionData.getContents();
+            } else {
+                implementation = "null";
+            }
+            return RETURN_ACTION_CLASS_TEMPLATE.formatted(implementation, escapeSource(implementation));
+        }
+
+        public List<TypedArgument> getInstanceVariables() {
+            return instanceVars.entrySet().stream()
+                    .map(e -> TypedArgument.from(e.getValue().getLeft(), e.getKey()))
+                    .collect(Collectors.toList());
         }
     }
 
@@ -311,38 +450,38 @@ public class CompilationProcessBuilder implements ProcessBuilder {
         private final ClassFileData containingClass;
         private final ExecutableConfig config;
         @Getter
-        private final int[] coordinates;
+        private final Coordinates coordinates;
         @Getter
-        private final List<int[]> dependencyCoordinates = new ArrayList<>();
+        private final Set<Coordinates> dependencyCoordinates = new HashSet<>();
 
         private final String contents;
 
         private ExecutableInnerClassData(final ClassFileData containingClass,
-                                         final ExecutableConfig config, final int[] coordinates,
-                                         final int[]... dependencyCoordinates) {
+                                         final ExecutableConfig config, final Coordinates coordinates,
+                                         final Set<Coordinates> dependencyCoordinates) {
             this.containingClass = containingClass;
             this.config = config;
             this.coordinates = coordinates;
-            this.dependencyCoordinates.addAll(Arrays.asList(dependencyCoordinates));
+            this.dependencyCoordinates.addAll(dependencyCoordinates);
             this.contents = generateContents();
         }
 
         @Override
         public String getContents() {
             return ACTION_CLASS_TEMPLATE.formatted(getClassName(),
-                    CoordinateUtils.formatCoordinatesAsArrayInitializer(coordinates),
+                    coordinatesAsCodeInitializer(coordinates),
                     formatDependencies(), contents,
                     escapeSource(contents));
         }
 
         private String getClassName() {
             return "Executable"
-                    + Arrays.stream(coordinates).mapToObj(Integer::toString).collect(Collectors.joining("_"));
+                    + coordinatesAsVariableFragment(coordinates);
         }
 
         private String formatDependencies() {
             return dependencyCoordinates.stream()
-                    .map(CoordinateUtils::formatCoordinatesAsArrayInitializer)
+                    .map(CompilationProcessBuilder::coordinatesAsCodeInitializer)
                     .collect(Collectors.joining(", "));
         }
 
@@ -362,10 +501,10 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                     final Class<?> type = input.getType();
                     final List<ExpressionConfig> expressionConfigs = actionConfig.getInputs().get(name);
                     if (input.isMulti()) {
-                        return new ArrayExpressionData(ExecutableInnerClassData.this, expressionConfigs,
+                        return new ArrayExpressionData(this.containingClass, expressionConfigs,
                                 type);
                     } else {
-                        return mapExpression(ExecutableInnerClassData.this, expressionConfigs.get(0));
+                        return mapExpression(this.containingClass, expressionConfigs.getFirst(), type);
                     }
                 }).map(ExpressionData::getContents).collect(Collectors.joining(", "));
                 builder.append(providerName).append('.').append(method.getName()).append('(').append(args)
@@ -374,21 +513,21 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                     builder.append(";\n\t\t\treturn null");
                 }
             } else if (config instanceof BlockConfig) {
-                builder.append("context.enqueue(trie.listChildValues(")
-                        .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(coordinates))
-                        .append(", 1));\n");
+                builder.append("context.enqueue(trie.listChildren(")
+                        .append(coordinatesAsCodeInitializer(coordinates))
+                        .append("));\n");
                 builder.append("\t\t\treturn null");
             } else if (config instanceof ConditionalConfig conditionalConfig) {
                 final ExpressionConfig condition = conditionalConfig.getCondition();
-                final ExpressionData conditionalExpression = mapExpression(this, condition);
-                final int[] thenCoordinates = CoordinateUtils.getNthChild(coordinates, 0);
-                final int[] elseCoordinates = CoordinateUtils.getNthChild(coordinates, 1);
+                final ExpressionData conditionalExpression = mapExpression(this.containingClass, condition, boolean.class);
+                final Coordinates thenCoordinates = coordinates.getNthChild(0);
+                final Coordinates elseCoordinates = coordinates.getNthChild(1);
                 builder.append("if (").append(conditionalExpression.getContents()).append(") {\n")
                         .append("\t\t\t\tcontext.enqueue(trie.get(")
-                        .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(thenCoordinates))
+                        .append(coordinatesAsCodeInitializer(thenCoordinates))
                         .append(");\n").append("\t\t\t} else {\n").append("\t\t\t\tcontext.enqueue(trie.get(")
                         .append(");\n")
-                        .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(elseCoordinates))
+                        .append(coordinatesAsCodeInitializer(elseCoordinates))
                         .append("\t\t\t}\n");
                 builder.append(";\n\t\t\treturn null");
             }
@@ -401,20 +540,17 @@ public class CompilationProcessBuilder implements ProcessBuilder {
     @Getter
     private static abstract class ExpressionData implements SourceSegment {
 
-        private final ExecutableInnerClassData containingClass;
+        private final ClassFileData sourceFile;
 
-        private ExpressionData(final ExecutableInnerClassData containingClass) {
-            this.containingClass = containingClass;
-        }
-
-        public ClassFileData getSourceFile() {
-            return containingClass.getContainingClass();
+        private ExpressionData(final ClassFileData sourceFile) {
+            this.sourceFile = sourceFile;
         }
     }
 
     private class FunctionExpressionData extends ExpressionData {
 
         private final FunctionConfig config;
+        private final Class<?> type;
         private final FunctionSpec spec;
 
         private final List<ExpressionData> args;
@@ -422,11 +558,12 @@ public class CompilationProcessBuilder implements ProcessBuilder {
         @Getter
         private final String contents;
 
-        public FunctionExpressionData(final ExecutableInnerClassData containingClass,
-                                      final FunctionConfig config) {
-            super(containingClass);
+        public FunctionExpressionData(final ClassFileData sourceFile,
+                                      final FunctionConfig config, Class<?> type) {
+            super(sourceFile);
             this.config = config;
             this.spec = engineSpec.getFunctions().get(config.getName());
+            this.type = type;
             this.args =
                     this.spec.getInputs().stream().map(this::getArgument).collect(Collectors.toList());
             this.contents = generateContents();
@@ -436,8 +573,13 @@ public class CompilationProcessBuilder implements ProcessBuilder {
             final Object provider = spec.getProvider();
             final String providerVar = this.getSourceFile().ensureInstanceVar(provider);
             final String functionName = spec.getMethod().getName();
-            return providerVar + "." + functionName + "("
+            final String implementation = providerVar + "." + functionName + "("
                     + args.stream().map(ExpressionData::getContents).collect(Collectors.joining(", ")) + ")";
+            if (!type.equals(spec.getOutputType())) {
+                return "context.convert(%s, %s.class)".formatted(implementation, getSourceFile().ensureImport(type));
+            } else {
+                return implementation;
+            }
         }
 
         public ExpressionData getArgument(final InputSpec inputSpec) {
@@ -446,10 +588,10 @@ public class CompilationProcessBuilder implements ProcessBuilder {
             final boolean multi = inputSpec.isMulti();
             final List<ExpressionConfig> expressionConfigs = config.getArguments().get(name);
             if (multi) {
-                return new ArrayExpressionData(getContainingClass(), expressionConfigs, type);
+                return new ArrayExpressionData(getSourceFile(), expressionConfigs, type);
             } else {
-                final ExpressionConfig expressionConfig = expressionConfigs.get(0);
-                return mapExpression(getContainingClass(), expressionConfig);
+                final ExpressionConfig expressionConfig = expressionConfigs.getFirst();
+                return mapExpression(getSourceFile(), expressionConfig, type);
             }
         }
     }
@@ -457,20 +599,19 @@ public class CompilationProcessBuilder implements ProcessBuilder {
     private class ValueExpressionData extends ExpressionData {
 
         private final ValueConfig config;
-        private final TypeSpec typeSpec;
+        private final Class<?> type;
         @Getter
         private final String contents;
 
-        private ValueExpressionData(final ExecutableInnerClassData containingClass,
-                                    final ValueConfig config) {
-            super(containingClass);
+        private ValueExpressionData(final ClassFileData sourceFile,
+                                    final ValueConfig config, final Class<?> type) {
+            super(sourceFile);
             this.config = config;
-            this.typeSpec = engineSpec.getTypes().get(config.getTypeId());
+            this.type = type;
             this.contents = generateContents();
         }
 
         public String generateContents() {
-            final Class<?> type = typeSpec.getRuntimeClass();
             final String value = config.getValue();
             if (type.equals(int.class) || type.equals(Integer.class) || type.equals(float.class)
                     || type.equals(Float.class) || type.equals(boolean.class) || type.equals(Boolean.class)) {
@@ -486,57 +627,72 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                 // doubles require "D" suffix
                 return value + "D";
             }
-            throw new IllegalStateException("Type cannot be represented as value: " + typeSpec);
+            throw new IllegalStateException("Type cannot be represented as value: " + type);
         }
     }
 
     private class VariableReferenceData extends ExpressionData {
 
         private final ReferenceConfig config;
+        private final Class<?> type;
         @Getter
         private final String contents;
 
-        private VariableReferenceData(final ExecutableInnerClassData containingClass,
-                                      final ReferenceConfig config) {
-            super(containingClass);
+        private VariableReferenceData(final ClassFileData sourceFile,
+                                      final ReferenceConfig config, final Class<?> type) {
+            super(sourceFile);
             this.config = config;
+            this.type = type;
             this.contents = generateContents();
         }
 
         public String generateContents() {
             final StringBuilder writer = new StringBuilder();
+            final String typeName = getSourceFile().ensureImport(type);
 
             for (final ReferenceConfig.Reference reference : config.getReferences()) {
-                final int[] coordinates = reference.getCoordinates();
-                final String[] path = reference.getPath();
-                final boolean nested = path != null && path.length > 0;
+                final Coordinates coordinates = Coordinates.from(reference.getCoordinateList());
+                final List<String> path = reference.getPath();
+                final boolean nested = path != null && !path.isEmpty();
                 if (nested) {
                     writer.append("context.isNestedVariableSet(")
-                            .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(coordinates));
+                            .append(coordinatesAsCodeInitializer(coordinates)).append(", ")
+                            .append(typeName)
+                            .append(".class");
                     for (final String p : path) {
                         writer.append(", \"").append(p).append("\"");
                     }
                     writer.append(")");
                 } else {
                     writer.append("context.isVariableSet(")
-                            .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(coordinates)).append(")");
+                            .append(coordinatesAsCodeInitializer(coordinates))
+                            .append(", ")
+                            .append(typeName)
+                            .append(".class)");
                 }
                 writer.append(" ? ");
                 if (nested) {
                     writer.append("context.getNestedVariable(")
-                            .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(coordinates));
+                            .append(coordinatesAsCodeInitializer(coordinates))
+                            .append(", ")
+                            .append(typeName)
+                            .append(".class");
                     for (final String p : path) {
                         writer.append(", \"").append(p).append("\"");
                     }
                     writer.append(")");
                 } else {
                     writer.append("context.getVariable(")
-                            .append(CoordinateUtils.formatCoordinatesAsArrayInitializer(coordinates)).append(")");
+                            .append(coordinatesAsCodeInitializer(coordinates))
+                            .append(", ")
+                            .append(typeName)
+                            .append(".class")
+                            .append(")");
                 }
                 writer.append(" : ");
             }
             if (config.getFallback() != null) {
-                writer.append(mapExpression(this.getContainingClass(), config.getFallback()).getContents());
+                writer.append(mapExpression(getSourceFile(), config.getFallback(), type).getContents());
             } else {
                 writer.append("null");
             }
@@ -551,11 +707,11 @@ public class CompilationProcessBuilder implements ProcessBuilder {
         @Getter
         private final String contents;
 
-        private ArrayExpressionData(final ExecutableInnerClassData containingClass,
+        private ArrayExpressionData(final ClassFileData sourceFile,
                                     final List<ExpressionConfig> configs, final Class<?> type) {
-            super(containingClass);
+            super(sourceFile);
             this.type = type;
-            args = configs.stream().map(config -> mapExpression(containingClass, config))
+            args = configs.stream().map(config -> mapExpression(sourceFile, config, type))
                     .collect(Collectors.toList());
             getSourceFile().ensureImport(type);
             this.contents = generateContents();
@@ -574,14 +730,14 @@ public class CompilationProcessBuilder implements ProcessBuilder {
     }
 
 
-    private ExpressionData mapExpression(final ExecutableInnerClassData containingClass,
-                                         final ExpressionConfig config) {
+    private ExpressionData mapExpression(final ClassFileData sourceFile,
+                                         final ExpressionConfig config, final Class<?> type) {
         if (config instanceof FunctionConfig functionConfig) {
-            return new FunctionExpressionData(containingClass, functionConfig);
+            return new FunctionExpressionData(sourceFile, functionConfig, type);
         } else if (config instanceof ValueConfig valueConfig) {
-            return new ValueExpressionData(containingClass, valueConfig);
+            return new ValueExpressionData(sourceFile, valueConfig, type);
         } else if (config instanceof ReferenceConfig referenceConfig) {
-            return new VariableReferenceData(containingClass, referenceConfig);
+            return new VariableReferenceData(sourceFile, referenceConfig, type);
         }
         throw new IllegalStateException("Unknown expression config type: " + config.getClass());
     }
@@ -596,4 +752,21 @@ public class CompilationProcessBuilder implements ProcessBuilder {
                 .replace("\"", "\\\"")
                 .replace("\n", "\\n");
     }
+
+    /**
+     * Formats coordinates as a string that can be inserted into Java source code that will evaluate as an identical
+     * instance of Coordinates at runtime
+     */
+    private static String coordinatesAsCodeInitializer(final Coordinates coordinates) {
+        return "Coordinates.from(%s)".formatted(coordinates.asFormattedString(","));
+    }
+
+    /**
+     * Formats coordinates as a underscore-separated string, acceptable for use in variable and class names in Java source.
+     */
+    private static String coordinatesAsVariableFragment(final Coordinates coordinates) {
+        return coordinates.asFormattedString("_");
+    }
+
+
 }
